test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/4_parameter/PACKAGE_NAME_COLLIDE_PARENT.t
@static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_PARAM_INIT", parameters={ param_index=2, func_id="f" } } }
package QWE.QWE;
